# team-management-app

./: .env.example  .gitignore  README.md  compose.yaml  docker-compose.yaml
backend/: .env.example  Dockerfile  alembic.ini  backend.dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/routers/: team.py
backend/app/core/: config.py  utils.py
backend/app/db/: setup.py
backend/app/db/crud/: base.py  crud_team.py
backend/app/db/models/: __init__.py  team.py
backend/app/enums/: exceptions.py  player.py
backend/app/schemas/: team.py
backend/app/serializer/: team.py
backend/app/tests/api/: test_team.py
backend/migrations/: env.py
backend/migrations/versions/: 2023_10_04_0112-7088981bf0ad_create_table_teams.py  2023_10_06_2254-f1ca4046f930_more_specific_typing_for_id.py
backend/scripts/: test.sh
frontend/: frontend.dockerfile
